@@ -1,4 +1,6 @@
 0.4-1
+- add elevation() accessor
+- plot.sealevel(): only show 3 panels, for clarity
 - plot.ctd(): add argument 'type'
 - make imagep() handle x, y, and z as image() does
 - oce.plot.ts(): inferred ylim matches data range within provided xlim
